--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,159 @@
 ---
-layout: default
-title: Neat Starter
-path: home
+layout: 'base.html'
+description: 'Meta description for the page'
+metaTitle: 'Edmonton Casino Advisor'
+tagTitle: 'Fundraise with the Ace'
+preloadImg: '/images/landing-1920w.webp'
+preloadCSS: '/css/local.css'
+permalink: '/'
+eleventyNavigation:
+  key: Home
+  order: 100
 ---
+<!-- Enter html code below -->
 
-<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h1>
-    Welcome to
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
-      {{title}}
-    </strong>
-  </h1>
+<!-- ============================================ -->
+<!--                    Hero                      -->
+<!-- ============================================ -->
 
-  <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
-  </p>
+<section id="hero">
+  <div class="cs-container">
+    <div class="cs-flex-group">
+      <span class="cs-topper">Edmonton Casino Advisors</span>
+      <h1 class="cs-title">Fundraise with the Ace!</h1>
+      <p class="cs-text">
+        Edmonton Casino Advisor was established in March 2016. Cristian Patilea, the proprietor, is an independent casino advisor registered with the Alberta Gaming, Liquor and Cannabis (AGLC).
+      </p>
+    </div>
+  </div>
 
-  {% include "./_includes/partials/content.html" %}
-</div>
+  <!-- Background Image -->
+  {% image './src/images/cards.jpg', 'mountains', 'cs-picture', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+</section>
+
+<!-- ============================================ -->
+<!--                  Services                    -->
+<!-- ============================================ -->
+
+<section id="services" class="services">
+  <!-- Get Icons From flaticon.com -->
+  <div class="card">
+    <picture>
+      <img
+        aria-hidden="true"
+        decoding="async"
+        src="/assets/svgs/star-promo.svg"
+        alt="appliance"
+        width="48"
+        height="48"
+/>
+    </picture>
+    <h2>Loyalty Program</h2>
+    <p>We are proud to work with organizations like yours: groups of volunteers who have such a great impact on their communities.</p>
+  </div>
+  <div class="card">
+    <h2>Promotions</h2>
+    <div class="button">
+      <a href="/promotions" class="button-solid" style="margin:auto;">View Details</a>
+    </div>
+  </div>
+  <div class="card">
+    <picture>
+      <img
+        aria-hidden="true"
+        decoding="async"
+        src="/assets/svgs/percent-promo.svg"
+        alt="appliance"
+        width="48"
+        height="48"
+/>
+    </picture>
+    <h2>Referral Program</h2>
+    <p>You work with us, and you are impressed by our services. Wouldn’t you want other groups like yours to have the same amazing experience?</p>
+  </div>
+</section>
+
+<!-- ============================================ -->
+<!--                   Reviews                    -->
+<!-- ============================================ -->
+
+<section id="reviews">
+  <div class="cs-container">
+    <span class="cs-topper">Testimonials</span>
+    <h2 class="cs-title">Words From Other Non-Profits</h2>
+    <p class="cs-text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit dolor volutpat porttitor sagittis nunc nisl. Sagittis
+      sit pellentesque gravida viverra. Leo ut sed euismod tortor risus et. Ornare non neque, leo, ornare. Lorem ipsum
+      dolor sit amet.
+    </p>
+    <ul class="cs-card-group">
+      <!-- Review 1 -->
+      <li class="cs-item">
+        <p class="cs-item-p">
+          “Thanks, Cristian! We will be calling you again for our next casino - always a pleasure to work with you and Cheryl. Thank you for helping us through each bump and delay with volunteers.”
+        </p>
+        <span class="cs-reviewer">
+          Liz K.
+          <span class="cs-desc">Fraser Community League</span>
+        </span>
+      </li>
+      <!-- Review 2 -->
+      <li class="cs-item">
+        <p class="cs-item-p">
+          “Thank you for your assistance & guidance over the two day casino and over the months leading up to the event. I will watch for the slotting letter and will be happy to encourage our club members to refer your services! You're the best!!”
+        </p>
+        <span class="cs-reviewer">
+          Heidee S.
+          <span class="cs-desc">Capital Region Archery Club</span>
+        </span>
+      </li>
+    </ul>
+    <a aria-label="read more reviews" href="/testimonials" class="button-solid">Read More</a>
+  </div>
+</section>
+<!-- ============================================ -->
+<!--             Final Call to Action             -->
+<!-- ============================================ -->
+
+<section id="cta">
+  <div class="container">
+    <h2 class="title">
+      Get It Done <br/>
+      With Us Today
+    </h2>
+    <p>
+      Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add
+      these to the bottom of all pages.
+    </p>
+    <a href="/contact" class="button-solid">Get an Estimate Now</a>
+  </div>
+  {% image './src/images/Landing2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+</section>
+
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    window
+      .netlifyIdentity
+      .on('init', (user) => {
+        if (!user) {
+          window
+            .netlifyIdentity
+            .on('login', () => {
+              document.location.href = '/admin/';
+            });
+        }
+      });
+  }
+</script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", (user) => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
