Lots of changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
 layout: 'base.html'
-description: 'Meta description for the page'
+description: 'Edmonton Casino Advisor'
 metaTitle: 'Edmonton Casino Advisor'
-tagTitle: 'Fundraise with the Ace'
+tagTitle: 'Home'
 preloadImg: '/images/landing-1920w.webp'
 preloadCSS: '/css/local.css'
 permalink: '/'
