Fixed CSS paths

--- a/src/pages/casinos.html
+++ b/src/pages/casinos.html
@@ -4,7 +4,7 @@ description: 'Meta description for the page'
 metaTitle: 'Casino Affiliations'
 tagTitle: 'Casinos'
 preloadImg: '/images/casino.jpg'
-preloadCSS: '/css/casinos.css'
+preloadCSS: '/css/casino.css'
 permalink: 'casinos/'
 eleventyNavigation:
     key: Casinos
