--- a/src/pages/testimonials.html
+++ b/src/pages/testimonials.html
@@ -4,7 +4,7 @@ description: 'Meta description for the page'
 metaTitle: 'Non-Profit Testimonials'
 tagTitle: 'Testimonials'
 preloadImg: '/images/Volunteers-1920w.webp'
-preloadCSS: '/css/reviews.css'
+preloadCSS: '/css/testimonials.css'
 permalink: 'Testimonials/'
 eleventyNavigation:
     key: Testimonials
