Fixed testimonials and styling

--- a/src/index.html
+++ b/src/index.html
@@ -118,14 +118,13 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Get It Done <br/>
-      With Us Today
+      Seize the Jackpot <br/>
+      of Fundraising Success
     </h2>
     <p>
-      Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add
-      these to the bottom of all pages.
+       Contact Edmonton Casino Advisor to elevate your non-profit's events with professional casino advisors.
     </p>
-    <a href="/contact" class="button-solid">Get an Estimate Now</a>
+    <a href="/contact" class="button-solid">Reach out Now</a>
   </div>
   {% image './src/images/Landing2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
