--- a/src/pages/casinos.html
+++ b/src/pages/casinos.html
@@ -3,7 +3,7 @@ layout: 'base.html'
 description: 'Meta description for the page'
 metaTitle: 'Casino Affiliations'
 tagTitle: 'Casinos'
-preloadImg: '/images/casino.jpg'
+preloadImg: '/images/casino-1920w.webp'
 preloadCSS: '/css/casino.css'
 permalink: 'casinos/'
 eleventyNavigation:
