--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -69,13 +69,13 @@ eleventyNavigation:
     <div class="cs-right-section">
       <!--Email-->
       <span class="cs-header">Email</span>
-      <a class="cs-link" href="mailto:info@EdmontonCasinoAdvisor.ca">info@EdmontonCasinoAdvisor.ca</a>
+      <a class="cs-link" href="mailto:{{ client.email }}">{{ client.email }}</a>
       <!--Phone-->
       <span class="cs-header">Phone</span>
-      <a class="cs-link" href="tel:780-707-3488">(780) 707-3488</a>
+      <a class="cs-link" href="tel:{{ client.phone }}">{{ client.phoneFormatted }}</a>
       <!--Address-->
       <span class="cs-header">Fax</span>
-      <a class="cs-link" href="tel:1-801-937-5396">1-801-937-5396</a>
+      <a class="cs-link" href="tel:{{ client.fax }}">{{ client.fax }}</a>
 
       <!-- Background Image-->
       {% image './src/images/contact-side.jpg', 'ace card', 'cs-bg-picture', 'lazy'%}
