--- a/src/index.html
+++ b/src/index.html
@@ -82,9 +82,7 @@ eleventyNavigation:
     <span class="cs-topper">Testimonials</span>
     <h2 class="cs-title">Words From Other Non-Profits</h2>
     <p class="cs-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit dolor volutpat porttitor sagittis nunc nisl. Sagittis
-      sit pellentesque gravida viverra. Leo ut sed euismod tortor risus et. Ornare non neque, leo, ornare. Lorem ipsum
-      dolor sit amet.
+      Explore impactful feedback from other non-profits who have benefited from working with Edmonton Casino Advisors.
     </p>
     <ul class="cs-card-group">
       <!-- Review 1 -->
