Adjustment to add social buttons, some css changes

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@ eleventyNavigation:
     <span class="cs-topper">Testimonials</span>
     <h2 class="cs-title">Words From Other Non-Profits</h2>
     <p class="cs-text">
-      Explore impactful feedback from other non-profits who have benefited from working with Edmonton Casino Advisors.
+      Explore impactful feedback from other non-profits who have benefited from working with Edmonton Casino Advisor.
     </p>
     <ul class="cs-card-group">
       <!-- Review 1 -->
